# workshop-connect

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
tests/: test_async_client.py  test_cli.py  test_client.py  test_connector.py
workshop_connect/: __init__.py  _catalog.json  _deployment.py  async_client.py  catalog.py  cli.py  client.py  connector.py  errors.py
